--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/zz"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+
         <activity android:name=".DevicesDemoActivity" />
         <activity android:name=".PubSubTestActivity" />
         <activity android:name=".SettingsActivity" />
