--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
+    //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:4.4.1'
     implementation 'com.google.code.gson:gson:2.7'
+    implementation 'org.litepal.android:core:1.6.1'
 }
