--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:sharedUserId="android.uid.system"
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:sharedUserId="android.uid.system"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Device2Activity"></activity>
+        <activity android:name=".dele_add.DeviceDetailActivity" />
+        <activity android:name=".dele_add.DeviceActivity" />
         <activity android:name=".DevicesDemoActivity" />
         <activity android:name=".PubSubTestActivity" />
         <activity android:name=".SettingsActivity" />
+        <activity android:name=".dele_add.ChooseDeviceActivity" />
 
         <service
             android:name=".mqtt.MqttService"
