--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:allowBackup="true"
         android:icon="@drawable/zz"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:sharedUserId="android.uid.system"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+
         tools:ignore="MissingClass">
         <activity android:name=".Device2Activity"></activity>
         <activity android:name=".dele_add.DeviceDetailActivity" />
